	[almost] all color commands are filtered against the current terminal 
	setting monochrome/color.  Before this, colors could slip erroneously
	into a "monochrome" plot.  Now we limit this to an explicit set of
	conditions, currently plots with rgbimage, rgb variable, or certain
	user-defined color palettes.  That 3rd category is a bit loose and may
	need to be more carefully defined.

2013-09-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.h src/plot3d.c:  plot3d.c is the only user of NEED_PALETTE,
	so move it there.

	* src/color.c (set_rgbcolor_var set_rgbcolor_const) src/color.h
	src/pm3d.c src/hidden3d.c src/graphics.c src/graph3d.c:
	Provide two parallel routines for passing RGB color information to a
	terminal. set_rgbcolor_const sets the color immediately.
	set_rgbcolor_var flags that this came from a plot with "rgb variable"
	and passes it to apply_pm3dcolor for possible additional filtering
	(e.g. decide whether to pass it to a monochrome terminal or not).

2013-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (null_set_color) src/term_api.h (TERM_NULL_SET_COLOR)
	src/boundary.c src/color.c src/gadgets.c src/graph3d.c src/graphics.c:
	Provide a null_set_color() routine to cover all terminals that do not
	provide their own term->set_color() routine.  This removes the need to
	check for term->set_color before trying to call it.  It also makes the
	behavior of non-RGB terminals more consistent, although still imperfect.

	* src/graph3d.c src/boundary.c:  Don't try to use opaque (background)
	fill if the terminal does not support RGB colors.

	* src/graph3d.c: Always color contour lines via set_color, even for
	terminals that do not support RGB colors.
	Bug #1284

	* src/command.c src/graph3d.c: Set can_pm3d based on TERM_NULL_SET_COLOR

2013-09-20  Per Persson  <persquare@users.sourceforge.net>

	* configure.in m4/apple.m4 src/term.c src/term.h:
	Modify configuration tests to look for aquaterm as a framework rather